modification on images

--- a/src/index.html
+++ b/src/index.html
@@ -887,7 +887,7 @@ title: Home
   <div class="flex items-center justify-center">
       <div class="grid gap-8 mt-8 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4">
           <div class="w-full max-w-xs text-left">
-              <img class="object-cover object-center w-full h-48 mx-auto rounded-lg" src="https://res.cloudinary.com/dropify/image/upload/v1641640118/perezre/nc_kg74qc.png" alt="Nextcloud rating"/>
+              <img class="object-cover object-center w-full h-48 mx-auto rounded-lg" src="/img/nc.svg" alt="Nextcloud rating"/>
 
               <div class="mt-2">
                   <h3 class="text-lg font-medium text-gray-700 dark:text-gray-200">Nextcloud - Setup and Konfiguration</h3>
@@ -900,7 +900,7 @@ title: Home
           </div>
 
           <div class="w-full max-w-xs text-left">
-              <img class="object-cover object-center w-full h-48 mx-auto rounded-lg" src="https://res.cloudinary.com/dropify/image/upload/v1641640252/perezre/Screenshot_2022-01-08_at_12.10.21_isxmql.png" alt="avatar"/>
+              <img class="object-cover object-center w-full h-48 mx-auto rounded-lg" src="/img/11ty.svg" alt="11ty and TailwindCSS"/>
 
               <div class="mt-2">
                   <h3 class="text-lg font-medium text-gray-700 dark:text-gray-200">Homepage - Upgrade and Redesign</h3>
@@ -913,7 +913,7 @@ title: Home
           </div>
 
           <div class="w-full max-w-xs text-left">
-              <img class="object-cover object-center w-full h-48 mx-auto rounded-lg" src="https://res.cloudinary.com/dropify/image/upload/v1641657454/perezre/CloudPaths_thfdd7.png" alt="avatar"/>
+              <img class="object-cover object-center w-full h-48 mx-auto rounded-lg" src="/img/cloudpaths.svg" alt="Cloud Paths"/>
 
               <div class="mt-2">
                   <h3 class="text-lg font-medium text-gray-700 dark:text-gray-200">Cloud Computing - Learning Paths</h3>
@@ -926,7 +926,7 @@ title: Home
           </div>
 
           <div class="w-full max-w-xs text-left">
-              <img class="object-cover object-center w-full h-48 mx-auto rounded-lg" src="https://res.cloudinary.com/dropify/image/upload/v1641665767/perezre/b84kdC3t3_m5qh0n.png" alt="avatar"/>
+              <img class="object-cover object-center w-full h-48 mx-auto rounded-lg" src="/img/cybersecurity.svg" alt="Cybersecurity"/>
 
               <div class="mt-2">
                   <h3 class="text-lg font-medium text-gray-700 dark:text-gray-200">Cybersecurity - Hands-on</h3>
@@ -949,7 +949,7 @@ title: Home
 
     <p class="max-w-2xl mx-auto my-6 text-center text-gray-500 dark:text-gray-300">
       Projects in mechatronics engineering at the university. <br> Study language is german, therefore description is adapted.
-    <p class="text-xs py-2 text-gray-800 dark:text-white sm:py-0 text-center">Notenbewertung: 1 = sehr Gut | 2 = gut | 3 = befriedigend</p>
+    <p class="text-xs py-2 text-gray-800 dark:text-white sm:py-0 text-center">Notenbewertung: 1 = Sehr Gut | 2 = Gut | 3 = Befriedigend</p>
 
 
     <div class="flex items-center justify-center">
@@ -957,145 +957,145 @@ title: Home
       <div class="grid gap-x-10 gap-y-8 mt-8 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4">
 
         <div class="w-full max-w-xs text-left">
-          <img class="object-cover w-full h-3/4 rounded-xl aspect-square bg-white" src="https://res.cloudinary.com/dropify/image/upload/v1635943288/perezre/eng_jr07aw.jpg" alt="">
+          <img class="object-cover object-center w-full h-48 mx-auto rounded-lg" src="/img/demo.webp" alt="demo">
 
             <div class="mt-2">
-                <h3 class="text-lg font-bold text-gray-700 dark:text-gray-200">Bachelorarbeit</h3>
+                <h3 class="text-lg font-bold text-gray-700 dark:text-gray-200">Bachelorarbeit <a class="text-gray-500">(TBA)</a></h3>
               <p class="text-gray-500">In Arbeit</p>
             </div>
         </div>
 
           <div class="w-full max-w-xs text-left">
-            <img class="object-cover w-full h-3/4 rounded-xl aspect-square bg-white" src="https://res.cloudinary.com/dropify/image/upload/c_pad,h_1000,w_1000/v1636283005/perezre/BEPRO.png" alt="">
+            <img class="object-cover object-center w-full h-48 mx-auto rounded-lg" src="/img/BEPRO.svg" alt="Bachelor Projektarbeit">
 
               <div class="mt-2">
-                  <h3 class="text-lg font-bold text-gray-700 dark:text-gray-200">Bachelor Projektarbeit (2.0)</h3>
-                <p class="text-gray-500">Entwicklung eines Tools zur Visualisierung von Kennwerten von Pressmaschinen</p>
+                  <h3 class="text-lg font-bold text-gray-700 dark:text-gray-200">Bachelor Projektarbeit <a class="text-gray-500">(2.0)</a></h3>
+                <p class="text-gray-500">Die Entwicklung von einem Softwarevergleichstool für die Pressenvermessung zur Analyse von Genauigkeitskennwerten.</p>
               </div>
           </div>
 
           <div class="w-full max-w-xs text-left">
-            <img class="object-cover w-full h-3/4 rounded-xl aspect-square bg-white" src="https://res.cloudinary.com/dropify/image/upload/c_pad,h_1000,w_1000/v1636281445/perezre/Screenshot_2021-11-07_at_11.36.57_q9vmu3.png" alt="avatar"/>
+            <img class="object-cover object-center w-full h-48 mx-auto rounded-lg" src="/img/SYS40.svg" alt="Systemdynamik"/>
 
               <div class="mt-2">
-                <h3 class="text-lg font-bold text-gray-700 dark:text-gray-200">Systemdynamik 1.7</h3>
+                <h3 class="text-lg font-bold text-gray-700 dark:text-gray-200">Systemdynamik <a class="text-gray-500">(1.7)</a></h3>
                 <p class="text-gray-500">Mit Matlab und Simulink Simulation entwicklung von Systemdynamik zwischen zwei Behälter</p>            
               </div>
           </div>
 
           <div class="w-full max-w-xs text-left">
-            <img class="object-cover w-full h-3/4 rounded-xl aspect-square bg-white" src="https://res.cloudinary.com/dropify/image/upload/c_pad,h_1000,w_1000/v1636281168/perezre/ROB02.png" alt="">
+            <img class="object-cover object-center w-full h-48 mx-auto rounded-lg" src="/img/ROB02.svg" alt="Machinelles Sehen">
 
               <div class="mt-2">
-                  <h3 class="text-lg font-bold text-gray-700 dark:text-gray-200">Maschinelles Sehen 1.0</h3>
+                  <h3 class="text-lg font-bold text-gray-700 dark:text-gray-200">Maschinelles Sehen <a class="text-gray-500">(1.0)</a></h3>
                 <p class="text-gray-500">Matlab mit Image Processing Toolbox Entwicklung von Bildbearbeitung von Bildverbesserung</p>
               </div>
           </div>
 
           <div class="w-full max-w-xs text-left">
-            <img class="object-cover w-full h-3/4 rounded-xl aspect-square bg-white" src="https://res.cloudinary.com/dropify/image/upload/c_pad,h_1000,w_1000/v1636226067/perezre/ROB03.png" alt="avatar"/>
+            <img class="object-cover object-center w-full h-48 mx-auto rounded-lg" src="/img/ROB03.svg" alt="Robotik"/>
 
               <div class="mt-2">
-                <h3 class="text-lg font-bold text-gray-700 dark:text-gray-200">Robotik 1.3</h3>
+                <h3 class="text-lg font-bold text-gray-700 dark:text-gray-200">Robotik <a class="text-gray-500">(1.3)</a></h3>
                 <p class="text-gray-500">Industrieroboter Eigenschaften, Aufbau und Anwendungen mit Funktionen beschreiben</p>            
               </div>
           </div>
 
           <div class="w-full max-w-xs text-left">
-            <img class="object-cover w-full h-3/4 rounded-xl aspect-square bg-white" src="https://res.cloudinary.com/dropify/image/upload/c_pad,h_1000,w_1000/v1636225929/perezre/FTE60.png" alt="">
+            <img class="object-cover object-center w-full h-48 mx-auto rounded-lg" src="/img/FTE60.svg" alt="NC-Programmierung">
 
               <div class="mt-2">
-                  <h3 class="text-lg font-bold text-gray-700 dark:text-gray-200">NC-Programmierung 1.7</h3>
+                  <h3 class="text-lg font-bold text-gray-700 dark:text-gray-200">NC-Programmierung <a class="text-gray-500">(1.7)</a></h3>
                 <p class="text-gray-500">Einführung in Computergestützte Fertigungstechnik und Roboter Programmierung</p>
               </div>
           </div>
 
           <div class="w-full max-w-xs text-left">
-            <img class="object-cover w-full h-3/4 rounded-xl aspect-square bg-white" src="https://res.cloudinary.com/dropify/image/upload/c_pad,h_1000,w_1000/v1636227329/perezre/PAB40.png" alt="avatar"/>
+            <img class="object-cover object-center w-full h-48 mx-auto rounded-lg" src="/img/PAB40.svg" alt="Projektarbeit"/>
 
               <div class="mt-2">
-                <h3 class="text-lg font-bold text-gray-700 dark:text-gray-200">Gruppen Projektarbeit 1.3</h3>
+                <h3 class="text-lg font-bold text-gray-700 dark:text-gray-200">Gruppen Projektarbeit <a class="text-gray-500">(1.3)</a></h3>
                 <p class="text-gray-500">Entwicklung eines Maschine Learning Algorithmus zur Ziffererkennung in Python mit Tensorflow</p>            
               </div>
           </div>
 
           <div class="w-full max-w-xs text-left">
-            <img class="object-cover w-full h-3/4 rounded-xl aspect-square bg-white" src="https://res.cloudinary.com/dropify/image/upload/c_pad,h_1000,w_1000/v1636280549/perezre/SWE22.png" alt="">
+            <img class="object-cover object-center w-full h-48 mx-auto rounded-lg" src="/img/SWE22.svg" alt="Softwareentwicklung">
 
               <div class="mt-2">
-                  <h3 class="text-lg font-bold text-gray-700 dark:text-gray-200">Softwareentwicklung 1.7</h3>
+                  <h3 class="text-lg font-bold text-gray-700 dark:text-gray-200">Softwareentwicklung <a class="text-gray-500">(1.7)</a></h3>
                 <p class="text-gray-500">GUI-Entwicklung eines Petrinetz simulator in Python. Anwendung eines Aufzugs.</p>
               </div>
           </div>
 
           <div class="w-full max-w-xs text-left">
-            <img class="object-cover w-full h-3/4 rounded-xl aspect-square bg-white" src="https://res.cloudinary.com/dropify/image/upload/c_pad,h_1000,w_1000/v1636226680/perezre/MCS40.png" alt="avatar"/>
+            <img class="object-cover object-center w-full h-48 mx-auto rounded-lg" src="/img/MCS40.svg" alt="Microcomputer-Systeme"/>
 
               <div class="mt-2">
-                <h3 class="text-lg font-bold text-gray-700 dark:text-gray-200">Microcomputer-Systeme 1.7</h3>
+                <h3 class="text-lg font-bold text-gray-700 dark:text-gray-200">Microcomputer-Systeme <a class="text-gray-500">(1.7)</a></h3>
                 <p class="text-gray-500">Entwicklung einer Wetterstation mit Raspberry Pi und drei Sensoren als IoT System</p>            
               </div>
           </div>
 
           <div class="w-full max-w-xs text-left">
-            <img class="object-cover w-full h-3/4 rounded-xl aspect-square bg-white" src="https://res.cloudinary.com/dropify/image/upload/c_pad,h_1000,w_1000/v1636225569/perezre/AUT21.png" alt="">
+            <img class="object-cover object-center w-full h-48 mx-auto rounded-lg" src="/img/AUT21.svg" alt="Mechatronische Wandler">
 
               <div class="mt-2">
-                  <h3 class="text-lg font-bold text-gray-700 dark:text-gray-200">Mechatronische Wandler 2.3</h3>
+                  <h3 class="text-lg font-bold text-gray-700 dark:text-gray-200">Mechatronische Wandler <a class="text-gray-500">(2.3)</a></h3>
                 <p class="text-gray-500">Beschreibung von Piezo Sensor in der Industrie. Anhand von Funktion, Anwendung und Wettbewerbplatz</p>
               </div>
           </div>
 
           <div class="w-full max-w-xs text-left">
-            <img class="object-cover w-full h-3/4 rounded-xl aspect-square bg-white" src="https://res.cloudinary.com/dropify/image/upload/c_pad,h_1000,w_1000/v1636223843/perezre/REG23.png" alt="avatar"/>
+            <img class="object-cover object-center w-full h-48 mx-auto rounded-lg" src="/img/REG23.svg" alt="Steuerungtechnik"/>
 
               <div class="mt-2">
-                <h3 class="text-lg font-bold text-gray-700 dark:text-gray-200">Steuerungtechnik 1.3</h3>
+                <h3 class="text-lg font-bold text-gray-700 dark:text-gray-200">Steuerungtechnik <a class="text-gray-500">(1.3)</a></h3>
                 <p class="text-gray-500">Entwicklung einer Steuerung des Programmablaufs einer Bohreinrichtung in SPS</p>            
               </div>
           </div>
 
           <div class="w-full max-w-xs text-left">
-            <img class="object-cover w-full h-3/4 rounded-xl aspect-square bg-white" src="https://res.cloudinary.com/dropify/image/upload/c_pad,h_1000,w_1000/v1636222481/perezre/REG02.jpg" alt="">
+            <img class="object-cover object-center w-full h-48 mx-auto rounded-lg" src="/img/REG02.svg" alt="Regelungstechnik">
 
               <div class="mt-2">
-                  <h3 class="text-lg font-bold text-gray-700 dark:text-gray-200">Regelungstechnik 1.0</h3>
+                  <h3 class="text-lg font-bold text-gray-700 dark:text-gray-200">Regelungstechnik <a class="text-gray-500">(1.0)</a></h3>
                 <p class="text-gray-500">Einführung in Matlab einer Regelung und Simulation in Simulink</p>
               </div>
           </div>
 
           <div class="w-full max-w-xs text-left">
-            <img class="object-cover w-full h-3/4 rounded-xl aspect-square bg-white" src="https://res.cloudinary.com/dropify/image/upload/c_pad,h_1000,w_1000/v1636221564/perezre/AUT20.png" alt="avatar"/>
+            <img class="object-cover object-center w-full h-48 mx-auto rounded-lg" src="/img/AUT20.svg" alt="Messtechnik"/>
 
               <div class="mt-2">
-                <h3 class="text-lg font-bold text-gray-700 dark:text-gray-200">Messtechnik 2.7</h3>
+                <h3 class="text-lg font-bold text-gray-700 dark:text-gray-200">Messtechnik <a class="text-gray-500">(2.7)</a></h3>
                 <p class="text-gray-500">Messtechnik Grundlagen und Einführung in LabView Simulation</p>            
               </div>
           </div>
 
           <div class="w-full max-w-xs text-left">
-            <img class="object-cover w-full h-3/4 rounded-xl aspect-square bg-white" src="https://res.cloudinary.com/dropify/image/upload/c_pad,h_1000,w_1000/v1636220592/perezre/KON24.png" alt="">
+            <img class="object-cover object-center w-full h-48 mx-auto rounded-lg" src="/img/KON24.svg" alt="Produktentwicklungsprozess">
 
               <div class="mt-2">
-                  <h3 class="text-lg font-bold text-gray-700 dark:text-gray-200">Produktentwicklungsprozess 1.0</h3>
+                  <h3 class="text-lg font-bold text-gray-700 dark:text-gray-200">Produktentwicklungsprozess <a class="text-gray-500">(1.0)</a></h3>
                 <p class="text-gray-500">Entwicklung einer Kosmetikmaschine an der VDI 2222</p>
               </div>
           </div>
 
           <div class="w-full max-w-xs text-left">
-            <img class="object-cover w-full h-3/4 rounded-xl aspect-square bg-white" src="https://res.cloudinary.com/dropify/image/upload/c_pad,h_1000,w_1000/v1641759803/perezre/DFwseGa3256vlaphf.png" alt="wst20"/>
+            <img class="object-cover object-center w-full h-48 mx-auto rounded-lg" src="/img/WST20.svg" alt="Werkstoffkunde"/>
 
               <div class="mt-2">
-                <h3 class="text-lg font-bold text-gray-700 dark:text-gray-200">Werkstoffkunde 3.0</h3>
+                <h3 class="text-lg font-bold text-gray-700 dark:text-gray-200">Werkstoffkunde <a class="text-gray-500">(3.0)</a></h3>
                 <p class="text-gray-500">Einführung in Werkstoffe von Metallen und Kunststoffe. Laborbericht in Werkstoffprüfung</p>            
               </div>
           </div>
 
           <div class="w-full max-w-xs text-left">
-            <img class="object-cover w-full h-3/4 rounded-xl aspect-square bg-white" src="https://res.cloudinary.com/dropify/image/upload/c_pad,h_1000,w_1000/v1636220104/perezre/SQF21.png" alt="">
+            <img class="object-cover object-center w-full h-48 mx-auto rounded-lg" src="/img/SQF21.svg" alt="Schlüsselqualifikation">
 
               <div class="mt-2">
-                  <h3 class="text-lg font-bold text-gray-700 dark:text-gray-200">Schlüsselqualifikation 1.0</h3>
+                  <h3 class="text-lg font-bold text-gray-700 dark:text-gray-200">Schlüsselqualifikation <a class="text-gray-500">(1.0)</a></h3>
                 <p class="text-gray-500">Beschreibung für eines </p>
               </div>
           </div>
