--- a/src/index.html
+++ b/src/index.html
@@ -38,7 +38,7 @@ title: Home
 <!-- CTA -->
 
 <header>
-  <div class="w-full bg-center bg-cover h-[32rem]" style="background-image: url(https://res.cloudinary.com/dropify/image/upload/v1601867021/hero1_n19kbj.jpg);">
+  <div class="w-full bg-center bg-cover h-[32rem]" style="background-image: url(/img/hero.svg);">
       <div class="flex items-center justify-center w-full h-full bg-gray-900 bg-opacity-50">
           <div class="text-center">
               <h1 class="text-2xl font-semibold text-white uppercase lg:text-3xl">Stay <span class="text-blue-400 underline">Curious</span></h1>
@@ -117,7 +117,7 @@ title: Home
           <div class="mt-8 lg:mt-0 lg:w-1/2">
               <div class="flex items-center justify-center lg:justify-end">
                   <div class="max-w-lg">
-                      <img class="w-[14rem] h-[14rem] flex-shrink-0 object-cover xl:w-[15rem] xl:h-[15rem] rounded-full" src="https://res.cloudinary.com/dropify/image/upload/v1641935098/perezre/avatarV3-modified_exxklj.png" alt="">
+                      <img class="w-[14rem] h-[14rem] flex-shrink-0 object-cover xl:w-[15rem] xl:h-[15rem] rounded-full" src="/img/me.svg" alt="Avatar">
                   </div>
               </div>
           </div>
@@ -966,7 +966,7 @@ title: Home
         </div>
 
           <div class="w-full max-w-xs text-left">
-            <img class="object-cover object-center w-full h-48 mx-auto rounded-lg" src="/img/BEPRO.svg" alt="Bachelor Projektarbeit">
+            <img class="object-cover object-center w-full h-48 mx-auto rounded-lg aspect-video" src="/img/BEPRO.svg" alt="Bachelor Projektarbeit" width="" height="">
 
               <div class="mt-2">
                   <h3 class="text-lg font-bold text-gray-700 dark:text-gray-200">Bachelor Projektarbeit <a class="text-gray-500">(2.0)</a></h3>
@@ -975,7 +975,7 @@ title: Home
           </div>
 
           <div class="w-full max-w-xs text-left">
-            <img class="object-cover object-center w-full h-48 mx-auto rounded-lg" src="/img/SYS40.svg" alt="Systemdynamik"/>
+            <img class="object-cover object-center w-full h-48 mx-auto rounded-lg aspect-video" src="/img/SYS40.svg" alt="Systemdynamik" width="" height="">
 
               <div class="mt-2">
                 <h3 class="text-lg font-bold text-gray-700 dark:text-gray-200">Systemdynamik <a class="text-gray-500">(1.7)</a></h3>
@@ -984,7 +984,7 @@ title: Home
           </div>
 
           <div class="w-full max-w-xs text-left">
-            <img class="object-cover object-center w-full h-48 mx-auto rounded-lg" src="/img/ROB02.svg" alt="Machinelles Sehen">
+            <img class="object-cover object-center w-full h-48 mx-auto rounded-lg aspect-video" src="/img/ROB02.svg" alt="Machinelles Sehen" width="" height="">
 
               <div class="mt-2">
                   <h3 class="text-lg font-bold text-gray-700 dark:text-gray-200">Maschinelles Sehen <a class="text-gray-500">(1.0)</a></h3>
@@ -993,7 +993,7 @@ title: Home
           </div>
 
           <div class="w-full max-w-xs text-left">
-            <img class="object-cover object-center w-full h-48 mx-auto rounded-lg" src="/img/ROB03.svg" alt="Robotik"/>
+            <img class="object-cover object-center w-full h-48 mx-auto rounded-lg aspect-video" src="/img/ROB03.svg" alt="Robotik" width="" height="">
 
               <div class="mt-2">
                 <h3 class="text-lg font-bold text-gray-700 dark:text-gray-200">Robotik <a class="text-gray-500">(1.3)</a></h3>
@@ -1002,7 +1002,7 @@ title: Home
           </div>
 
           <div class="w-full max-w-xs text-left">
-            <img class="object-cover object-center w-full h-48 mx-auto rounded-lg" src="/img/FTE60.svg" alt="NC-Programmierung">
+            <img class="object-cover object-center w-full h-48 mx-auto rounded-lg aspect-video" src="/img/FTE60.svg" alt="NC-Programmierung" width="" height="">
 
               <div class="mt-2">
                   <h3 class="text-lg font-bold text-gray-700 dark:text-gray-200">NC-Programmierung <a class="text-gray-500">(1.7)</a></h3>
@@ -1011,7 +1011,7 @@ title: Home
           </div>
 
           <div class="w-full max-w-xs text-left">
-            <img class="object-cover object-center w-full h-48 mx-auto rounded-lg" src="/img/PAB40.svg" alt="Projektarbeit"/>
+            <img class="object-cover object-center w-full h-48 mx-auto rounded-lg aspect-video" src="/img/PAB40.svg" alt="Projektarbeit" width="" height="">
 
               <div class="mt-2">
                 <h3 class="text-lg font-bold text-gray-700 dark:text-gray-200">Gruppen Projektarbeit <a class="text-gray-500">(1.3)</a></h3>
@@ -1020,7 +1020,7 @@ title: Home
           </div>
 
           <div class="w-full max-w-xs text-left">
-            <img class="object-cover object-center w-full h-48 mx-auto rounded-lg" src="/img/SWE22.svg" alt="Softwareentwicklung">
+            <img class="object-cover object-center w-full h-48 mx-auto rounded-lg aspect-video" src="/img/SWE22.svg" alt="Softwareentwicklung" width="" height="">
 
               <div class="mt-2">
                   <h3 class="text-lg font-bold text-gray-700 dark:text-gray-200">Softwareentwicklung <a class="text-gray-500">(1.7)</a></h3>
@@ -1029,7 +1029,7 @@ title: Home
           </div>
 
           <div class="w-full max-w-xs text-left">
-            <img class="object-cover object-center w-full h-48 mx-auto rounded-lg" src="/img/MCS40.svg" alt="Microcomputer-Systeme"/>
+            <img class="object-cover object-center w-full h-48 mx-auto rounded-lg aspect-video" src="/img/MCS40.svg" alt="Microcomputer-Systeme" width="" height="">
 
               <div class="mt-2">
                 <h3 class="text-lg font-bold text-gray-700 dark:text-gray-200">Microcomputer-Systeme <a class="text-gray-500">(1.7)</a></h3>
@@ -1038,7 +1038,7 @@ title: Home
           </div>
 
           <div class="w-full max-w-xs text-left">
-            <img class="object-cover object-center w-full h-48 mx-auto rounded-lg" src="/img/AUT21.svg" alt="Mechatronische Wandler">
+            <img class="object-cover object-center w-full h-48 mx-auto rounded-lg aspect-video" src="/img/AUT21.svg" alt="Mechatronische Wandler" width="" height="">
 
               <div class="mt-2">
                   <h3 class="text-lg font-bold text-gray-700 dark:text-gray-200">Mechatronische Wandler <a class="text-gray-500">(2.3)</a></h3>
@@ -1047,7 +1047,7 @@ title: Home
           </div>
 
           <div class="w-full max-w-xs text-left">
-            <img class="object-cover object-center w-full h-48 mx-auto rounded-lg" src="/img/REG23.svg" alt="Steuerungtechnik"/>
+            <img class="object-cover object-center w-full h-48 mx-auto rounded-lg aspect-video" src="/img/REG23.svg" alt="Steuerungtechnik" width="" height="">
 
               <div class="mt-2">
                 <h3 class="text-lg font-bold text-gray-700 dark:text-gray-200">Steuerungtechnik <a class="text-gray-500">(1.3)</a></h3>
@@ -1056,7 +1056,7 @@ title: Home
           </div>
 
           <div class="w-full max-w-xs text-left">
-            <img class="object-cover object-center w-full h-48 mx-auto rounded-lg" src="/img/REG02.svg" alt="Regelungstechnik">
+            <img class="object-cover object-center w-full h-48 mx-auto rounded-lg aspect-video" src="/img/REG02.svg" alt="Regelungstechnik" width="" height="">
 
               <div class="mt-2">
                   <h3 class="text-lg font-bold text-gray-700 dark:text-gray-200">Regelungstechnik <a class="text-gray-500">(1.0)</a></h3>
@@ -1065,7 +1065,7 @@ title: Home
           </div>
 
           <div class="w-full max-w-xs text-left">
-            <img class="object-cover object-center w-full h-48 mx-auto rounded-lg" src="/img/AUT20.svg" alt="Messtechnik"/>
+            <img class="object-cover object-center w-full h-48 mx-auto rounded-lg aspect-video" src="/img/AUT20.svg" alt="Messtechnik" width="" height="">
 
               <div class="mt-2">
                 <h3 class="text-lg font-bold text-gray-700 dark:text-gray-200">Messtechnik <a class="text-gray-500">(2.7)</a></h3>
@@ -1074,7 +1074,7 @@ title: Home
           </div>
 
           <div class="w-full max-w-xs text-left">
-            <img class="object-cover object-center w-full h-48 mx-auto rounded-lg" src="/img/KON24.svg" alt="Produktentwicklungsprozess">
+            <img class="object-cover object-center w-full h-48 mx-auto rounded-lg aspect-video" src="/img/KON24.svg" alt="Produktentwicklungsprozess" width="" height="">
 
               <div class="mt-2">
                   <h3 class="text-lg font-bold text-gray-700 dark:text-gray-200">Produktentwicklungsprozess <a class="text-gray-500">(1.0)</a></h3>
@@ -1083,7 +1083,7 @@ title: Home
           </div>
 
           <div class="w-full max-w-xs text-left">
-            <img class="object-cover object-center w-full h-48 mx-auto rounded-lg" src="/img/WST20.svg" alt="Werkstoffkunde"/>
+            <img class="object-cover object-center w-full h-48 mx-auto rounded-lg aspect-video" src="/img/WST20.svg" alt="Werkstoffkunde" width="" height="">
 
               <div class="mt-2">
                 <h3 class="text-lg font-bold text-gray-700 dark:text-gray-200">Werkstoffkunde <a class="text-gray-500">(3.0)</a></h3>
@@ -1092,7 +1092,7 @@ title: Home
           </div>
 
           <div class="w-full max-w-xs text-left">
-            <img class="object-cover object-center w-full h-48 mx-auto rounded-lg" src="/img/SQF21.svg" alt="Schlüsselqualifikation">
+            <img class="object-cover object-center w-full h-48 mx-auto rounded-lg aspect-video" src="/img/SQF21.svg" alt="Schlüsselqualifikation" width="" height="">
 
               <div class="mt-2">
                   <h3 class="text-lg font-bold text-gray-700 dark:text-gray-200">Schlüsselqualifikation <a class="text-gray-500">(1.0)</a></h3>
