edited demo image and update it

--- a/src/index.html
+++ b/src/index.html
@@ -957,7 +957,7 @@ title: Home
       <div class="grid gap-x-10 gap-y-8 mt-8 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4">
 
         <div class="w-full max-w-xs text-left">
-          <img class="object-cover object-center w-full h-48 mx-auto rounded-lg" src="/img/demo.webp" alt="demo">
+          <img class="object-cover object-center w-full h-48 mx-auto rounded-lg aspect-video" src="/img/demo.svg" alt="demo" width="" height="">
 
             <div class="mt-2">
                 <h3 class="text-lg font-bold text-gray-700 dark:text-gray-200">Bachelorarbeit <a class="text-gray-500">(TBA)</a></h3>
