edited last images and updated them

--- a/src/index.html
+++ b/src/index.html
@@ -117,7 +117,7 @@ title: Home
           <div class="mt-8 lg:mt-0 lg:w-1/2">
               <div class="flex items-center justify-center lg:justify-end">
                   <div class="max-w-lg">
-                      <img class="w-[14rem] h-[14rem] flex-shrink-0 object-cover xl:w-[15rem] xl:h-[15rem] rounded-full" src="/img/me.svg" alt="Avatar">
+                      <img class="w-[14rem] h-[14rem] flex-shrink-0 object-cover xl:w-[15rem] xl:h-[15rem] rounded-full aspect-square" src="/img/me.svg" alt="avatar" width="" height="">
                   </div>
               </div>
           </div>
@@ -887,7 +887,7 @@ title: Home
   <div class="flex items-center justify-center">
       <div class="grid gap-8 mt-8 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4">
           <div class="w-full max-w-xs text-left">
-              <img class="object-cover object-center w-full h-48 mx-auto rounded-lg" src="/img/nc.svg" alt="Nextcloud rating"/>
+              <img class="object-cover object-center w-full h-48 mx-auto rounded-lg aspect-video" src="/img/nc.svg" alt="Nextcloud rating" width="" height="">
 
               <div class="mt-2">
                   <h3 class="text-lg font-medium text-gray-700 dark:text-gray-200">Nextcloud - Setup and Konfiguration</h3>
@@ -900,7 +900,7 @@ title: Home
           </div>
 
           <div class="w-full max-w-xs text-left">
-              <img class="object-cover object-center w-full h-48 mx-auto rounded-lg" src="/img/11ty.svg" alt="11ty and TailwindCSS"/>
+              <img class="object-cover object-center w-full h-48 mx-auto rounded-lg aspect-video" src="/img/11ty.svg" alt="11ty and TailwindCSS" width="" height="">
 
               <div class="mt-2">
                   <h3 class="text-lg font-medium text-gray-700 dark:text-gray-200">Homepage - Upgrade and Redesign</h3>
@@ -913,7 +913,7 @@ title: Home
           </div>
 
           <div class="w-full max-w-xs text-left">
-              <img class="object-cover object-center w-full h-48 mx-auto rounded-lg" src="/img/cloudpaths.svg" alt="Cloud Paths"/>
+              <img class="object-cover object-center w-full h-48 mx-auto rounded-lg aspect-video" src="/img/cloudpaths.svg" alt="Cloud Paths" width="" height="">
 
               <div class="mt-2">
                   <h3 class="text-lg font-medium text-gray-700 dark:text-gray-200">Cloud Computing - Learning Paths</h3>
@@ -926,7 +926,7 @@ title: Home
           </div>
 
           <div class="w-full max-w-xs text-left">
-              <img class="object-cover object-center w-full h-48 mx-auto rounded-lg" src="/img/cybersecurity.svg" alt="Cybersecurity"/>
+              <img class="object-cover object-center w-full h-48 mx-auto rounded-lg aspect-video" src="/img/cybersecurity.svg" alt="Cybersecurity" width="" height="">
 
               <div class="mt-2">
                   <h3 class="text-lg font-medium text-gray-700 dark:text-gray-200">Cybersecurity - Hands-on</h3>
