removed document.write

--- a/src/index.html
+++ b/src/index.html
@@ -1211,5 +1211,5 @@ title: Home
     </a>
   </div>
   <p class="text-xs py-2 text-gray-800 text-center dark:text-white sm:py-0"><link rel="stylesheet" type="text/css" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" />
-    Copyright &copy; 2013-<script>document.write(new Date().getFullYear())</script> - PEREZRE All Rights Reserved <br> Made with <i class="icon ion-heart" style="color: #e25555;"></i> in Switzerland</p>
+    Copyright &copy; 2013-2022 - PEREZRE All Rights Reserved <br> Made with <i class="icon ion-heart" style="color: #e25555;"></i> in Switzerland</p>
 </footer>
