--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,9 @@
 layout: base.html
 title: Home
 ---
+<!-- Scripts -->
+
+<script async src="https://cdn.splitbee.io/sb.js"></script>
 
 <!-- Navbar -->
 
