--- a/src/index.html
+++ b/src/index.html
@@ -2,9 +2,6 @@
 layout: base.html
 title: Home
 ---
-<!-- Scripts -->
-
-<script async src="https://cdn.splitbee.io/sb.js"></script>
 
 <!-- Navbar -->
 
@@ -1213,6 +1210,7 @@ title: Home
       </svg>
     </a>
   </div>
-  <p class="text-xs py-2 text-gray-800 text-center dark:text-white sm:py-0"><link rel="stylesheet" type="text/css" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" />
-    Copyright &copy; 2013-2022 - PEREZRE All Rights Reserved <br> Made with <i class="icon ion-heart" style="color: #e25555;"></i> in Switzerland</p>
+  <p class="text-xs py-2 text-gray-800 text-center dark:text-white sm:py-0">
+    Copyright &copy; 2013-2022 - PEREZRE All Rights Reserved <br> Made with <svg class="w-6 h-6" fill="#e25555" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M3.172 5.172a4 4 0 015.656 0L10 6.343l1.172-1.171a4 4 0 115.656 5.656L10 17.657l-6.828-6.829a4 4 0 010-5.656z" clip-rule="evenodd"></path></svg> in Switzerland</p>
 </footer>
+
