removed foreign icon

--- a/src/index.html
+++ b/src/index.html
@@ -1210,7 +1210,7 @@ title: Home
       </svg>
     </a>
   </div>
-  <p class="text-xs py-2 text-gray-800 text-center dark:text-white sm:py-0">
-    Copyright &copy; 2013-2022 - PEREZRE All Rights Reserved <br> Made with <i <svg class="w-6 h-6" fill="#e25555" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M3.172 5.172a4 4 0 015.656 0L10 6.343l1.172-1.171a4 4 0 115.656 5.656L10 17.657l-6.828-6.829a4 4 0 010-5.656z" clip-rule="evenodd"></path></svg></i> in Switzerland</p>
+  <div class="text-xs py-2 text-gray-800 text-center dark:text-white sm:py-0">
+    Copyright &copy; 2013-2022 - PEREZRE All Rights Reserved <br> Made with <svg class="inline-block w-4 h-4" fill="#e25555" viewBox="0 0 24 24">
+    <path d="M3.172 5.172a4 4 0 015.656 0L10 6.343l1.172-1.171a4 4 0 115.656 5.656L10 17.657l-6.828-6.829a4 4 0 010-5.656z"/></svg>in Switzerland</div>
 </footer>
-
