--- a/src/index.html
+++ b/src/index.html
@@ -38,10 +38,10 @@ title: Home
 <!-- CTA -->
 
 <header>
-  <div class="w-full bg-center bg-cover h-[32rem]" style="background-image: url(/img/hero.svg);">
+  <div class="w-full bg-center bg-cover h-[32rem]" style="background-image: url(/img/bg.jpg);">
       <div class="flex items-center justify-center w-full h-full bg-gray-900 bg-opacity-50">
           <div class="text-center">
-              <h1 class="text-2xl font-semibold text-white uppercase lg:text-3xl">Stay <span class="text-blue-400 underline">Curious</span></h1>
+              <h1 class="text-2xl font-semibold text-white uppercase lg:text-3xl">Stay <span class="text-blue-500 underline">Curious</span></h1>
               <button class="w-full px-4 py-2 mt-4 text-sm font-medium text-white uppercase transition-colors duration-200  bg-blue-600 rounded-md lg:w-auto hover:bg-blue-500 focus:outline-none focus:bg-blue-500">More</button>
           </div>
       </div>
