width and heigth for bg

--- a/src/index.html
+++ b/src/index.html
@@ -38,7 +38,7 @@ title: Home
 <!-- CTA -->
 
 <header>
-  <div class="w-full bg-center bg-cover h-[32rem]" style="background-image: url(/img/bg.jpg);">
+  <div class="w-full bg-center bg-cover h-[32rem]" style="background-image: url(/img/bg.jpg);" width="1920" heigth="1080">
       <div class="flex items-center justify-center w-full h-full bg-gray-900 bg-opacity-50">
           <div class="text-center">
               <h1 class="text-2xl font-semibold text-white uppercase lg:text-3xl">Stay <span class="text-blue-500 underline">Curious</span></h1>
