--- a/src/index.html
+++ b/src/index.html
@@ -887,7 +887,7 @@ title: Home
   <div class="flex items-center justify-center">
       <div class="grid gap-8 mt-8 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4">
           <div class="w-full max-w-xs text-left">
-              <img class="object-cover object-center w-full h-max mx-auto rounded-lg aspect-video" src="/img/nc.jpg" alt="Nextcloud rating" width="1920" height="1080">
+              <img class="object-cover object-center w-full h-max mx-auto rounded-lg aspect-video" src="/img/nc.jpg" alt="Nextcloud rating" width="100%" height="100%">
 
               <div class="mt-2">
                   <h3 class="text-lg font-medium text-gray-700 dark:text-gray-200">Nextcloud - Setup and Konfiguration</h3>
@@ -900,7 +900,7 @@ title: Home
           </div>
 
           <div class="w-full max-w-xs text-left">
-              <img class="object-cover object-center w-full h-max mx-auto rounded-lg aspect-video" src="/img/11ty.jpg" alt="11ty and TailwindCSS" width="1920" height="1080">
+              <img class="object-cover object-center w-full h-max mx-auto rounded-lg aspect-video" src="/img/11ty.jpg" alt="11ty and TailwindCSS" width="100%" height="100%">
 
               <div class="mt-2">
                   <h3 class="text-lg font-medium text-gray-700 dark:text-gray-200">Homepage - Upgrade and Redesign</h3>
@@ -913,7 +913,7 @@ title: Home
           </div>
 
           <div class="w-full max-w-xs text-left">
-              <img class="object-cover object-center w-full h-max mx-auto rounded-lg aspect-video" src="/img/cloudpaths.jpg" alt="Cloud Paths" width="1920" height="1080">
+              <img class="object-cover object-center w-full h-max mx-auto rounded-lg aspect-video" src="/img/cloudpaths.jpg" alt="Cloud Paths" width="100%" height="100%">
 
               <div class="mt-2">
                   <h3 class="text-lg font-medium text-gray-700 dark:text-gray-200">Cloud Computing - Learning Paths</h3>
@@ -926,7 +926,7 @@ title: Home
           </div>
 
           <div class="w-full max-w-xs text-left">
-              <img class="object-cover object-center w-full h-max mx-auto rounded-lg aspect-video" src="/img/cybersecurity.jpg" alt="Cybersecurity" width="1920" height="1080">
+              <img class="object-cover object-center w-full h-max mx-auto rounded-lg aspect-video" src="/img/cybersecurity.jpg" alt="Cybersecurity" width="100%" height="100%">
 
               <div class="mt-2">
                   <h3 class="text-lg font-medium text-gray-700 dark:text-gray-200">Cybersecurity - Hands-on</h3>
@@ -957,7 +957,7 @@ title: Home
       <div class="grid gap-x-10 gap-y-8 mt-8 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4">
 
         <div class="w-full max-w-xs text-left">
-          <img class="object-cover object-center w-full h-48 mx-auto rounded-lg aspect-video" src="/img/demo.svg" alt="demo" width="1920" height="1080">
+          <img class="object-cover object-center w-full h-48 mx-auto rounded-lg aspect-video" src="#" alt="demo" width="1920" height="1080">
 
             <div class="mt-2">
                 <h3 class="text-lg font-bold text-gray-700 dark:text-gray-200">Bachelorarbeit <a class="text-gray-500">(TBA)</a></h3>
