--- a/src/index.html
+++ b/src/index.html
@@ -984,7 +984,7 @@ title: Home
           </div>
 
           <div class="w-full max-w-xs text-left">
-            <img class="object-cover object-center w-full h-48 mx-auto rounded-lg aspect-video" src="/img/ROB02.svg" alt="Machinelles Sehen" width="1920" height="1080">
+            <img class="object-cover object-center w-full h-48 mx-auto rounded-lg aspect-video" src="/img/ROB02.jpg" alt="Machinelles Sehen" width="1920" height="1080">
 
               <div class="mt-2">
                   <h3 class="text-lg font-bold text-gray-700 dark:text-gray-200">Maschinelles Sehen <a class="text-gray-500">(1.0)</a></h3>
@@ -993,7 +993,7 @@ title: Home
           </div>
 
           <div class="w-full max-w-xs text-left">
-            <img class="object-cover object-center w-full h-48 mx-auto rounded-lg aspect-video" src="/img/ROB03.svg" alt="Robotik" width="1920" height="1080">
+            <img class="object-cover object-center w-full h-48 mx-auto rounded-lg aspect-video" src="/img/ROB03.jpg" alt="Robotik" width="1440" height="810">
 
               <div class="mt-2">
                 <h3 class="text-lg font-bold text-gray-700 dark:text-gray-200">Robotik <a class="text-gray-500">(1.3)</a></h3>
@@ -1002,7 +1002,7 @@ title: Home
           </div>
 
           <div class="w-full max-w-xs text-left">
-            <img class="object-cover object-center w-full h-48 mx-auto rounded-lg aspect-video" src="/img/FTE60.svg" alt="NC-Programmierung" width="1920" height="1080">
+            <img class="object-cover object-center w-full h-48 mx-auto rounded-lg aspect-video" src="/img/FTE60.jpg" alt="NC-Programmierung" width="1440" height="810">
 
               <div class="mt-2">
                   <h3 class="text-lg font-bold text-gray-700 dark:text-gray-200">NC-Programmierung <a class="text-gray-500">(1.7)</a></h3>
@@ -1011,7 +1011,7 @@ title: Home
           </div>
 
           <div class="w-full max-w-xs text-left">
-            <img class="object-cover object-center w-full h-48 mx-auto rounded-lg aspect-video" src="/img/PAB40.svg" alt="Projektarbeit" width="1920" height="1080">
+            <img class="object-cover object-center w-full h-48 mx-auto rounded-lg aspect-video" src="/img/PAB40.jpg" alt="Projektarbeit" width="1440" height="810">
 
               <div class="mt-2">
                 <h3 class="text-lg font-bold text-gray-700 dark:text-gray-200">Gruppen Projektarbeit <a class="text-gray-500">(1.3)</a></h3>
@@ -1020,7 +1020,7 @@ title: Home
           </div>
 
           <div class="w-full max-w-xs text-left">
-            <img class="object-cover object-center w-full h-48 mx-auto rounded-lg aspect-video" src="/img/SWE22.svg" alt="Softwareentwicklung" width="1920" height="1080">
+            <img class="object-cover object-center w-full h-48 mx-auto rounded-lg aspect-video" src="/img/SWE22.jpg" alt="Softwareentwicklung" width="1440" height="810">
 
               <div class="mt-2">
                   <h3 class="text-lg font-bold text-gray-700 dark:text-gray-200">Softwareentwicklung <a class="text-gray-500">(1.7)</a></h3>
