--- a/src/index.html
+++ b/src/index.html
@@ -1029,7 +1029,7 @@ title: Home
           </div>
 
           <div class="w-full max-w-xs text-left">
-            <img class="object-cover object-center w-full h-48 mx-auto rounded-lg aspect-video" src="/img/MCS40.svg" alt="Microcomputer-Systeme" width="1920" height="1080">
+            <img class="object-cover object-center w-full h-48 mx-auto rounded-lg aspect-video" src="/img/MCS40.jpg" alt="Microcomputer-Systeme" width="1920" height="1080">
 
               <div class="mt-2">
                 <h3 class="text-lg font-bold text-gray-700 dark:text-gray-200">Microcomputer-Systeme <a class="text-gray-500">(1.7)</a></h3>
@@ -1038,7 +1038,7 @@ title: Home
           </div>
 
           <div class="w-full max-w-xs text-left">
-            <img class="object-cover object-center w-full h-48 mx-auto rounded-lg aspect-video" src="/img/AUT21.svg" alt="Mechatronische Wandler" width="1920" height="1080">
+            <img class="object-cover object-center w-full h-48 mx-auto rounded-lg aspect-video" src="/img/AUT21.jpg" alt="Mechatronische Wandler" width="1920" height="1080">
 
               <div class="mt-2">
                   <h3 class="text-lg font-bold text-gray-700 dark:text-gray-200">Mechatronische Wandler <a class="text-gray-500">(2.3)</a></h3>
@@ -1047,7 +1047,7 @@ title: Home
           </div>
 
           <div class="w-full max-w-xs text-left">
-            <img class="object-cover object-center w-full h-48 mx-auto rounded-lg aspect-video" src="/img/REG23.svg" alt="Steuerungtechnik" width="1920" height="1080">
+            <img class="object-cover object-center w-full h-48 mx-auto rounded-lg aspect-video" src="/img/REG23.jpg" alt="Steuerungtechnik" width="1920" height="1080">
 
               <div class="mt-2">
                 <h3 class="text-lg font-bold text-gray-700 dark:text-gray-200">Steuerungtechnik <a class="text-gray-500">(1.3)</a></h3>
@@ -1056,7 +1056,7 @@ title: Home
           </div>
 
           <div class="w-full max-w-xs text-left">
-            <img class="object-cover object-center w-full h-48 mx-auto rounded-lg aspect-video" src="/img/REG02.svg" alt="Regelungstechnik" width="1920" height="1080">
+            <img class="object-cover object-center w-full h-48 mx-auto rounded-lg aspect-video" src="/img/REG02.jpg" alt="Regelungstechnik" width="1920" height="1080">
 
               <div class="mt-2">
                   <h3 class="text-lg font-bold text-gray-700 dark:text-gray-200">Regelungstechnik <a class="text-gray-500">(1.0)</a></h3>
@@ -1065,7 +1065,7 @@ title: Home
           </div>
 
           <div class="w-full max-w-xs text-left">
-            <img class="object-cover object-center w-full h-48 mx-auto rounded-lg aspect-video" src="/img/AUT20.svg" alt="Messtechnik" width="1920" height="1080">
+            <img class="object-cover object-center w-full h-48 mx-auto rounded-lg aspect-video" src="/img/AUT20.jpg" alt="Messtechnik" width="1920" height="1080">
 
               <div class="mt-2">
                 <h3 class="text-lg font-bold text-gray-700 dark:text-gray-200">Messtechnik <a class="text-gray-500">(2.7)</a></h3>
@@ -1074,7 +1074,7 @@ title: Home
           </div>
 
           <div class="w-full max-w-xs text-left">
-            <img class="object-cover object-center w-full h-48 mx-auto rounded-lg aspect-video" src="/img/KON24.svg" alt="Produktentwicklungsprozess" width="1920" height="1080">
+            <img class="object-cover object-center w-full h-48 mx-auto rounded-lg aspect-video" src="/img/KON24.jpg" alt="Produktentwicklungsprozess" width="1920" height="1080">
 
               <div class="mt-2">
                   <h3 class="text-lg font-bold text-gray-700 dark:text-gray-200">Produktentwicklungsprozess <a class="text-gray-500">(1.0)</a></h3>
@@ -1083,7 +1083,7 @@ title: Home
           </div>
 
           <div class="w-full max-w-xs text-left">
-            <img class="object-cover object-center w-full h-48 mx-auto rounded-lg aspect-video" src="/img/WST20.svg" alt="Werkstoffkunde" width="1920" height="1080">
+            <img class="object-cover object-center w-full h-48 mx-auto rounded-lg aspect-video" src="/img/WST20.jpg" alt="Werkstoffkunde" width="1920" height="1080">
 
               <div class="mt-2">
                 <h3 class="text-lg font-bold text-gray-700 dark:text-gray-200">Werkstoffkunde <a class="text-gray-500">(3.0)</a></h3>
@@ -1092,7 +1092,7 @@ title: Home
           </div>
 
           <div class="w-full max-w-xs text-left">
-            <img class="object-cover object-center w-full h-48 mx-auto rounded-lg aspect-video" src="/img/SQF21.svg" alt="Schlüsselqualifikation" width="1920" height="1080">
+            <img class="object-cover object-center w-full h-48 mx-auto rounded-lg aspect-video" src="/img/SQF21.jpg" alt="Schlüsselqualifikation" width="1920" height="1080">
 
               <div class="mt-2">
                   <h3 class="text-lg font-bold text-gray-700 dark:text-gray-200">Schlüsselqualifikation <a class="text-gray-500">(1.0)</a></h3>
