--- a/src/index.html
+++ b/src/index.html
@@ -11,23 +11,23 @@ title: Home
   <ul class="nav nav-tabs nav-justified flex flex-col md:flex-row flex-wrap list-none border-b-0 pl-0" id="tabs-tabJustify" role="tablist">
     
   <li class="nav-item flex-grow text-center" role="presentation">
-    <a href="#" class="border-b-2 border-transparent hover:text-gray-800 transition-colors duration-200 transform dark:hover:text-gray-200 hover:border-blue-500 mx-1.5 sm:mx-6 uppercase font-semibold text-sm block nav-link" id="home" data-bs-toggle="pill" data-bs-target="#tabs-tabJustify" role="tab" aria-controls="tabs-tabJustify" aria-selected="true">Home</a>
+    <a href="#" class="border-b-2 border-transparent hover:text-gray-800 transition-colors duration-200 transform dark:hover:text-gray-200 hover:border-blue-500 mx-1.5 sm:mx-6 uppercase font-semibold text-sm block nav-link" id="home" role="tab" aria-controls="tabs-tabJustify" aria-selected="false">Home</a>
   </li>
 
   <li class="nav-item flex-grow text-center" role="presentation">
-    <a href="#about" class="border-b-2 border-transparent hover:text-gray-800 transition-colors duration-200 transform dark:hover:text-gray-200 hover:border-blue-500 mx-1.5 sm:mx-6 uppercase font-semibold text-sm block nav-link" id="tabs-profile-tabJustify" data-bs-toggle="pill" data-bs-target="#tabs-profileJustify" role="tab" aria-controls="tabs-profileJustify" aria-selected="false">About</a>
+    <a href="#about" class="border-b-2 border-transparent hover:text-gray-800 transition-colors duration-200 transform dark:hover:text-gray-200 hover:border-blue-500 mx-1.5 sm:mx-6 uppercase font-semibold text-sm block nav-link" id="tabs-profile-tabJustify" role="tab" aria-controls="tabs-profileJustify" aria-selected="false">About</a>
   </li>
 
   <li class="nav-item flex-grow text-center" role="presentation">
-    <a href="#skills" class="border-b-2 border-transparent hover:text-gray-800 transition-colors duration-200 transform dark:hover:text-gray-200 hover:border-blue-500 mx-1.5 sm:mx-6 uppercase font-semibold text-sm block nav-link" id="tabs-messages-tabJustify" data-bs-toggle="pill" data-bs-target="#tabs-messagesJustify" role="tab" aria-controls="tabs-messagesJustify" aria-selected="false">Skills</a>
+    <a href="#skills" class="border-b-2 border-transparent hover:text-gray-800 transition-colors duration-200 transform dark:hover:text-gray-200 hover:border-blue-500 mx-1.5 sm:mx-6 uppercase font-semibold text-sm block nav-link" id="tabs-messages-tabJustify" role="tab" aria-controls="tabs-messagesJustify" aria-selected="false">Skills</a>
   </li>
 
   <li class="nav-item flex-grow text-center" role="presentation">
-    <a href="#projects" class="border-b-2 border-transparent hover:text-gray-800 transition-colors duration-200 transform dark:hover:text-gray-200 hover:border-blue-500 mx-1.5 sm:mx-6 uppercase font-semibold text-sm block nav-link" id="tabs-messages-tabJustify" data-bs-toggle="pill" data-bs-target="#tabs-messagesJustify" role="tab" aria-controls="tabs-messagesJustify" aria-selected="false">Projects</a>
+    <a href="#projects" class="border-b-2 border-transparent hover:text-gray-800 transition-colors duration-200 transform dark:hover:text-gray-200 hover:border-blue-500 mx-1.5 sm:mx-6 uppercase font-semibold text-sm block nav-link" id="tabs-messages-tabJustify" role="tab" aria-controls="tabs-messagesJustify" aria-selected="false">Projects</a>
   </li>
 
   <li class="nav-item flex-grow text-center" role="presentation">
-    <a href="mailto:contact@perezre.de" class="border-b-2 border-transparent hover:text-gray-800 transition-colors duration-200 transform dark:hover:text-gray-200 hover:border-blue-500 mx-1.5 sm:mx-6 uppercase font-semibold text-sm block nav-link" id="tabs-messages-tabJustify" data-bs-toggle="pill" data-bs-target="#tabs-messagesJustify" role="tab"
+    <a href="mailto:contact@perezre.de" class="border-b-2 border-transparent hover:text-gray-800 transition-colors duration-200 transform dark:hover:text-gray-200 hover:border-blue-500 mx-1.5 sm:mx-6 uppercase font-semibold text-sm block nav-link" id="tabs-messages-tabJustify" role="tab"
     aria-controls="tabs-messagesJustify" aria-selected="false">Contact</a>
   </li>
 
