update width and heigth images

--- a/src/index.html
+++ b/src/index.html
@@ -887,7 +887,7 @@ title: Home
   <div class="flex items-center justify-center">
       <div class="grid gap-8 mt-8 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4">
           <div class="w-full max-w-xs text-left">
-              <img class="object-cover object-center w-full max-h-48 mx-auto rounded-lg aspect-video" src="/img/nc.svg" alt="Nextcloud rating" width="100%" height="100%">
+              <img class="object-cover object-center w-full max-h-48 mx-auto rounded-lg aspect-video" src="/img/nc.svg" alt="Nextcloud rating" width="1920" height="1080">
 
               <div class="mt-2">
                   <h3 class="text-lg font-medium text-gray-700 dark:text-gray-200">Nextcloud - Setup and Konfiguration</h3>
@@ -900,7 +900,7 @@ title: Home
           </div>
 
           <div class="w-full max-w-xs text-left">
-              <img class="object-cover object-center w-full max-h-48 mx-auto rounded-lg aspect-video" src="/img/11ty.svg" alt="11ty and TailwindCSS" width="100%" height="100%">
+              <img class="object-cover object-center w-full max-h-48 mx-auto rounded-lg aspect-video" src="/img/11ty.svg" alt="11ty and TailwindCSS" width="1920" height="1080">
 
               <div class="mt-2">
                   <h3 class="text-lg font-medium text-gray-700 dark:text-gray-200">Homepage - Upgrade and Redesign</h3>
@@ -913,7 +913,7 @@ title: Home
           </div>
 
           <div class="w-full max-w-xs text-left">
-              <img class="object-cover object-center w-full max-h-48 mx-auto rounded-lg aspect-video" src="/img/cloudpaths.svg" alt="Cloud Paths" width="100%" height="100%">
+              <img class="object-cover object-center w-full max-h-48 mx-auto rounded-lg aspect-video" src="/img/cloudpaths.svg" alt="Cloud Paths" width="1920" height="1080">
 
               <div class="mt-2">
                   <h3 class="text-lg font-medium text-gray-700 dark:text-gray-200">Cloud Computing - Learning Paths</h3>
@@ -926,7 +926,7 @@ title: Home
           </div>
 
           <div class="w-full max-w-xs text-left">
-              <img class="object-cover object-center w-full max-h-48 mx-auto rounded-lg aspect-video" src="/img/cybersecurity.svg" alt="Cybersecurity" width="100%" height="100%">
+              <img class="object-cover object-center w-full max-h-48 mx-auto rounded-lg aspect-video" src="/img/cybersecurity.svg" alt="Cybersecurity" width="1920" height="1080">
 
               <div class="mt-2">
                   <h3 class="text-lg font-medium text-gray-700 dark:text-gray-200">Cybersecurity - Hands-on</h3>
@@ -957,7 +957,7 @@ title: Home
       <div class="grid gap-x-10 gap-y-8 mt-8 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4">
 
         <div class="w-full max-w-xs text-left">
-          <img class="object-cover object-center w-full h-48 mx-auto rounded-lg aspect-video" src="#" alt="demo" width="1920" height="1080">
+          <img class="object-cover object-center w-full h-48 mx-auto rounded-lg aspect-video" src="/img/bg.svg" alt="demo" width="1920" height="1080">
 
             <div class="mt-2">
                 <h3 class="text-lg font-bold text-gray-700 dark:text-gray-200">Bachelorarbeit <a class="text-gray-500">(TBA)</a></h3>
@@ -993,7 +993,7 @@ title: Home
           </div>
 
           <div class="w-full max-w-xs text-left">
-            <img class="object-cover object-center w-full h-48 mx-auto rounded-lg aspect-video" src="/img/ROB03.svg" alt="Robotik" width="1440" height="810">
+            <img class="object-cover object-center w-full h-48 mx-auto rounded-lg aspect-video" src="/img/ROB03.svg" alt="Robotik" width="1920" height="1080">
 
               <div class="mt-2">
                 <h3 class="text-lg font-bold text-gray-700 dark:text-gray-200">Robotik <a class="text-gray-500">(1.3)</a></h3>
@@ -1002,7 +1002,7 @@ title: Home
           </div>
 
           <div class="w-full max-w-xs text-left">
-            <img class="object-cover object-center w-full h-48 mx-auto rounded-lg aspect-video" src="/img/FTE60.svg" alt="NC-Programmierung" width="1440" height="810">
+            <img class="object-cover object-center w-full h-48 mx-auto rounded-lg aspect-video" src="/img/FTE60.svg" alt="NC-Programmierung" width="1920" height="1080">
 
               <div class="mt-2">
                   <h3 class="text-lg font-bold text-gray-700 dark:text-gray-200">NC-Programmierung <a class="text-gray-500">(1.7)</a></h3>
@@ -1011,7 +1011,7 @@ title: Home
           </div>
 
           <div class="w-full max-w-xs text-left">
-            <img class="object-cover object-center w-full h-48 mx-auto rounded-lg aspect-video" src="/img/PAB40.svg" alt="Projektarbeit" width="1440" height="810">
+            <img class="object-cover object-center w-full h-48 mx-auto rounded-lg aspect-video" src="/img/PAB40.svg" alt="Projektarbeit" width="1920" height="1080">
 
               <div class="mt-2">
                 <h3 class="text-lg font-bold text-gray-700 dark:text-gray-200">Gruppen Projektarbeit <a class="text-gray-500">(1.3)</a></h3>
@@ -1020,7 +1020,7 @@ title: Home
           </div>
 
           <div class="w-full max-w-xs text-left">
-            <img class="object-cover object-center w-full h-48 mx-auto rounded-lg aspect-video" src="/img/SWE22.svg" alt="Softwareentwicklung" width="1440" height="810">
+            <img class="object-cover object-center w-full h-48 mx-auto rounded-lg aspect-video" src="/img/SWE22.svg" alt="Softwareentwicklung" width="1920" height="1080">
 
               <div class="mt-2">
                   <h3 class="text-lg font-bold text-gray-700 dark:text-gray-200">Softwareentwicklung <a class="text-gray-500">(1.7)</a></h3>
