--- a/src/index.html
+++ b/src/index.html
@@ -1195,6 +1195,10 @@ title: PEREZRE
         ></path>
       </svg>
     </a>
+
+    <p>
+      <speedlify-score speedlify-url="https://speedlify-score.netlify.app/" hash="f25bf5a"></speedlify-score>
+    </p>
   </div>
   <div class="text-xs py-2 text-gray-800 text-center dark:text-white sm:py-0">
     Copyright &copy; 2013-2022 - PEREZRE All Rights Reserved <br> Made with <svg class="inline-block w-4 h-4" fill="#e25555" viewBox="0 0 24 24">
