--- a/src/index.html
+++ b/src/index.html
@@ -99,14 +99,15 @@ title: PEREZRE
               <p class="mt-4 text-gray-500 dark:text-gray-400 lg:max-w-md">
                   Hi, I am Rebeca, currently finishing my career on mechatronics engineering with a high affinity on IT. I strive to stay flexible with focus on cloud engineering and security. How technical things work has always been my motivation to dive deeper. I started rooting my phone, from there I continued with embedded systems and later with programming and devops tools. 
               </p>
-
-              <div class="flex items-center mt-6 mx-0">
-                <a href="mailto: contact@perezre.de" class="mr-9 text-gray-100">
-                  <svg class="w-6 h-6" fill="none" stroke="gray" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z"></path></svg>
+              <button class="inline-flex items-center px-4 py-2 mt-4 text-xs font-medium text-white uppercase transition-colors duration-200 bg-blue-600 rounded-md lg:w-auto hover:bg-blue-500 focus:outline-none focus:bg-blue-500">
+                <a href="mailto: contact@perezre.de">
+                  <svg class=" w-4 h-4 mr-2" fill="none" stroke="white" viewBox="0 0 22 22" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z"></path></svg>
                 </a>
+                <span>Get in touch</span>
+              </button>
               
-              </div>
-          </div>
+              
+            </div>
 
           <div class="mt-8 lg:mt-0 lg:w-1/2">
               <div class="flex items-center justify-center lg:justify-end">
@@ -1195,10 +1196,7 @@ title: PEREZRE
         ></path>
       </svg>
     </a>
-
-    <p>
-      <speedlify-score speedlify-url="https://speedlify-score.netlify.app/" hash="f25bf5a"></speedlify-score>
-    </p>
+  
   </div>
   <div class="text-xs py-2 text-gray-800 text-center dark:text-white sm:py-0">
     Copyright &copy; 2013-2022 - PEREZRE All Rights Reserved <br> Made with <svg class="inline-block w-4 h-4" fill="#e25555" viewBox="0 0 24 24">
