Added BA description

--- a/src/index.html
+++ b/src/index.html
@@ -130,7 +130,7 @@ title: PEREZRE
   <div class="container px-6 py-10 mx-auto">
       <h1 class="text-3xl font-semibold text-center text-gray-800 capitalize lg:text-4xl dark:text-white">Skill<span class="text-blue-500">set</span></h1>
       <p class="max-w-2xl mx-auto my-6 text-center text-gray-500 dark:text-gray-300">
-        An alphabetic overview some tools I use(ed) to work with
+        An alphabetic overview of some tools I use(ed) to work with
       </p>
       <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.14.0/devicon.min.css"> 
 
@@ -948,8 +948,8 @@ title: PEREZRE
           <img class="object-cover object-center w-full h-48 mx-auto rounded-lg aspect-video" src="/img/bg.svg" alt="demo" width="1920" height="1080">
 
             <div class="mt-2">
-                <h3 class="text-lg font-bold text-gray-700 dark:text-gray-200">Bachelorarbeit <a class="text-gray-500">(TBA)</a></h3>
-              <p class="text-gray-500">In Arbeit</p>
+                <h3 class="text-lg font-bold text-gray-700 dark:text-gray-200">Konzept einer Cloudlösung <a class="text-gray-500">(TBA)</a></h3>
+              <p class="text-gray-500">Das Ziel der Arbeit ist die Konzeption einer Cloudlösung zur Analyse von Daten für eine präventive Wartung in der Automobilbranche.</p>
             </div>
         </div>
 
